--- a/index.html
+++ b/index.html
@@ -1,570 +1,29 @@
 
-const wines = {
- "name": "wines",
- "children": [
-   {
- 	 "name": "Spain",
-    "avg_rating": 8.78,
- 	 "children": [
-     {
- 		 "name": "Central Spain",
-      "avg_rating": 10.64,
- 		 "children": [
- 			{"name": "Shiraz", "size": 12.1},
- 			{"name": "Rosé", "size": 11.1},
- 			{"name": "Macabeo-Moscatel", "size": 10.6},
- 			{"name": "Moscato", "size": 9.7},
- 			{"name": "Rosato", "size": 9.7}
- 		 ]
- 		},
-     {
- 		 "name": "Levante",
-      "avg_rating": 10.08,
- 		 "children": [
- 			{"name": "Cabernet Sauvignon", "size": 11.7},
- 			{"name": "Shiraz-Tempranillo", "size": 11.4},
- 			{"name": "Merseguera-Sauvignon Blanc", "size": 9.4},
- 			{"name": "Bobal-Cabernet Sauvignon", "size": 9.3},
- 			{"name": "Macabeo", "size": 8.6}
- 		 ]
- 		},
-     {
-     "name": "Spain Other",
-     "avg_rating": 9.78,
-     "children": [
-      {"name": "Macabeo", "size": 10.6},
-      {"name": "Moscato", "size": 10.1},
-      {"name": "Rosé", "size": 9.4},
-      {"name": "Verdejo", "size": 9.4},
-      {"name": "Viura", "size": 9.4}
-     ]
-    },
+<!DOCTYPE html>
+<meta charset="utf-8">
+<style>
 
-  {
-   "name": "Northern Spain",
-    "avg_rating": 8.58,
-   "children": [
-    {"name": "Viura-Chardonnay", "size": 9.0},
-    {"name": "Verdejo-Sauvignon Blanc", "size": 8.6},
-    {"name": "Garnacha-Monastrell", "size": 8.5},
-    {"name": "Shiraz-Tempranillo", "size": 8.4},
-    {"name": "Syrah-Grenache", "size": 8.4}
-   ]
- },
- {
- "name": "Galicia",
- "avg_rating": 4.82,
- "children": [
-  {"name": "Godello", "size": 5.4},
-  {"name": "Treixadura", "size": 4.8},
-  {"name": "White Blend", "size": 4.8},
-  {"name": "Albariño", "size": 4.6},
-  {"name": "Mencía", "size": 4.5}
- ]
-}
- 	 ]
- 	},
-  {
-   "name": "France",
-   "avg_rating": 7.499,
-   "children": [
-     {
-     "name": "France Other",
-     "avg_rating": 10.06,
-     "children": [
-      {"name": "Cabernet Sauvignon-Merlot", "size": 14.2},
-      {"name": "Moscato", "size": 9.6},
-      {"name": "Merlot-Grenache", "size": 8.9},
-      {"name": "Rhône-style White Blend", "size": 8.8},
-      {"name": "Tannat-Syrah", "size": 8.8}
-     ]
-    },
-    {
-     "name": "Languedoc-Roussillon",
-     "avg_rating": 8.62,
-     "children": [
-      {"name": "Grenache Noir", "size": 9.6},
-      {"name": "Chardonnay-Viognier", "size": 8.6},
-      {"name": "Cinsault", "size": 8.6},
-      {"name": "Cabernet Sauvignon", "size": 8.5},
-      {"name": "Marsanne-Roussanne", "size": 7.8}
-     ]
-    },
-
-   {
-   "name": "Southwest France",
-   "avg_rating": 8.38,
-   "children": [
-    {"name": "Colombard", "size": 9.5},
-    {"name": "Tannat-Syrah", "size": 8.6},
-    {"name": "Ugni Blanc-Colombard", "size": 8.2},
-    {"name": "Cabernet Sauvignon-Merlot", "size": 7.8},
-    {"name": "Syrah-Merlot", "size": 7.8}
-   ]
-  },
-  {
-  "name": "Provence",
-  "avg_rating": 5.96,
-  "children": [
-   {"name": "Syrah-Grenache", "size": 7.2},
-   {"name": "Pinot Noir", "size": 7.2},
-   {"name": "Viognier", "size": 6.0},
-   {"name": "Syrah", "size": 4.8},
-   {"name": "Vermentino", "size": 4.6}
-  ]
- },
- {
- "name": "Beaujolais",
- "avg_rating": 4.475,
- "children": [
-  {"name": "Gamay Noir", "size": 4.8},
-  {"name": "Chardonnay", "size": 4.7},
-  {"name": "Gamay", "size": 4.2},
-  {"name": "Rosé", "size": 4.2}
- ]
-}
-]
-},
-	{
-	 "name": "Australia",
-   "avg_rating": 6.936,
-	 "children": [
-     {
-     "name": "Australia Other",
-     "avg_rating": 9.42,
-     "children": [
-      {"name": "Malbec", "size": 10.5},
-      {"name": "Petite Sirah", "size": 9.7},
-      {"name": "Sauvignon Blanc-Semillon", "size": 9.4},
-      {"name": "Pinot Grigio", "size": 8.9},
-      {"name": "G-S-M", "size": 8.6}
-     ]
-   },
-		{
-		 "name": "New South Wales",
-     "avg_rating": 7.24,
-		 "children": [
-			{"name": "Moscato", "size": 9.4},
-			{"name": "Sparkling Blend", "size": 7.3},
-			{"name": "Merlot", "size": 6.5},
-			{"name": "Cabernet Sauvignon", "size": 6.5},
-			{"name": "Verdelho", "size": 6.5}
-		 ]
-		},
-    {
-    "name": "Western Australia",
-    "avg_rating": 6.26,
-    "children": [
-     {"name": "Cabernet Blend", "size": 8.4},
-     {"name": "Red Blend", "size": 6.2},
-     {"name": "Shiraz-Cabernet Sauvignon", "size": 5.9},
-     {"name": "Viognier", "size": 5.7},
-     {"name": "Sauvignon Blanc", "size": 5.1}
-    ]
-   },
-   {
-   "name": "South Australia",
-   "avg_rating": 6.1,
-   "children": [
-    {"name": "Sauvignon Blanc-Semillon", "size": 7.0},
-    {"name": "Sangiovese", "size": 5.9},
-    {"name": "Cabernet Merlot", "size": 5.9},
-    {"name": "Shiraz-Malbec", "size": 5.9},
-    {"name": "Savagnin", "size": 5.8}
-   ]
-  },
-  {
-  "name": "Victoria",
-  "avg_rating": 5.66,
-  "children": [
-   {"name": "Pinot Grigio", "size": 6.0},
-   {"name": "Cabernet Sauvignon-Merlot", "size": 5.8},
-   {"name": "Moscato", "size": 5.6},
-   {"name": "Rhône-style White Blend", "size": 5.6},
-   {"name": "Pinot Gris", "size": 5.3}
-  ]
- }
-
-	 ]
-	},
-  {
-   "name": "Chile",
-   "avg_rating": 7.898,
-   "children": [
-     {
-      "name": "Central Valley",
-      "avg_rating": 9.56,
-      "children": [
-       {"name": "Moscato", "size": 11.5},
-       {"name": "Malbec", "size": 10.1},
-       {"name": "Shiraz-Cabernet Sauvignon", "size": 9.2},
-       {"name": "Syrah", "size": 8.6},
-       {"name": "Chardonnay", "size": 8.4}
-      ]
-     },
-    {
-     "name": "Molina",
-     "avg_rating": 8.68,
-     "children": [
-      {"name": "Carmenère", "size": 10.5},
-      {"name": "Sauvignon Blanc", "size": 9.2},
-      {"name": "Chardonnay", "size": 9.0},
-      {"name": "Merlot", "size": 6.3},
-      {"name": "Cabernet Sauvignon", "size": 8.4}
-     ]
-    },
-    {
-     "name": "Rio Claro",
-     "avg_rating": 7.4,
-     "children": [
-      {"name": "Carmenère", "size": 7.7},
-      {"name": "Merlot", "size": 7.5},
-      {"name": "Sauvignon Blanc", "size": 7.5},
-      {"name": "Cabernet Sauvignon", "size": 6.9}
-     ]
-    },
-
-    {
-     "name": "Leyda Valley-Maipo Valley",
-     "avg_rating": 7.65,
-     "children": [
-      {"name": "Sauvignon Blanc", "size": 8.6},
-      {"name": "Pinot Noir", "size": 6.7}
-     ]
-   },
-   {
-    "name": "Casablanca-Curicó Valley",
-    "avg_rating": 6.2,
-    "children": [
-     {"name": "Sauvignon Blanc", "size": 6.2}
-    ]
-   }
-   ]
-  },
-	{
-	 "name": "Austria",
-   "avg_rating": 5.074,
-   "children": [
-     {
-     "name": "Steiermark",
-     "avg_rating": 5.8,
-     "children": [
-      {"name": "Rosé", "size": 7.2},
-      {"name": "Austrian white blend", "size": 7.1},
-      {"name": "Scheurebe", "size": 5.4},
-      {"name": "Pinot Blanc", "size": 4.9},
-      {"name": "Chardonnay", "size": 4.4}
-     ]
-    },
-    {
-    "name": "Weinland Österreich",
-    "avg_rating": 5.64,
-    "children": [
-     {"name": "Red Blend", "size": 8.0},
-     {"name": "Rosé", "size": 6.1},
-     {"name": "Grüner Veltliner", "size": 6.1},
-     {"name": "Zweigelt", "size": 4.8},
-     {"name": "Sparkling Blend", "size": 3.2}
-    ]
-   },
-
-  {
-  "name": "Niederösterreich",
-  "avg_rating": 4.98,
-  "children": [
-   {"name": "Rosé", "size": 6.4},
-   {"name": "Scheurebe", "size": 5.1},
-   {"name": "Zweigelt", "size": 4.7},
-   {"name": "Grüner Veltliner", "size": 4.5},
-   {"name": "Austrian Red Blend", "size": 4.2}
-  ]
- },
- {
-  "name": "Österreichischer Perlwein",
-  "avg_rating": 5.35,
-  "children": [
-   {"name": "Muskat Ottonel", "size": 7.1},
-   {"name": "Zweigelt", "size": 5.7},
-   {"name": "Sparkling Blend", "size": 4.6},
-   {"name": "Pinot Noir", "size": 4.0}
-  ]
- },
- {
- "name": "Wiener Gemischter Satz",
- "avg_rating": 3.6,
- "children": [
-  {"name": "White Blend", "size": 4.5},
-  {"name": "Austrian white blend", "size": 2.7}
- ]
-}
-   ]
-	}
-
-]
-
-};
-
-
-var margin = {top: 100, right: 120, bottom: 0, left: 150},
-		width = 960 - margin.left - margin.right,
-		height = 300 - margin.top - margin.bottom;
-
-var x = d3.scaleLinear()
-		.range([0, width]);
-
-var barHeight = 28;
-
-var color = d3.scaleOrdinal()
-		.range(["#428af5", "#ccc"]);
-
-var duration = 350,
-		delay = 25;
-
-var xAxis = d3.axisTop(x);
-
-var svg = d3.select("body").append("svg")
-		.attr("width", width + margin.left + margin.right)
-		.attr("height", height + margin.top + margin.bottom)
-	.append("g")
-		.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-svg.append("rect")
-		.attr("class", "background")
-		.attr("width", width)
-		.attr("height", height)
-		.on("click", up);
-
-svg.append("text")
-      .attr("x", width/2)
-      .attr("y", -60)
-      .attr("text-anchor", "middle")
-      .style("font-size", "20px")
-      .text("Top 5 Countries with Best Value Wines, Drilled Down by Province and Variety");
-
-      svg.append("text")
-         .attr("transform", "translate(" + (width/2) + " ," + (-30) + ")")
-         .style("text-anchor", "middle")
-         .style("font-size", "16px")
-         .text("Best Value Score measured as Rating divided by Price");
-
-         svg.append("text")
-            .attr("transform", "translate(" + (width/2) + " ," + (195) + ")")
-            .style("text-anchor", "middle")
-            .style("font-size", "16px")
-            .text("Click on a bar to drill down / Click on empty space to go back.");
-/*
-svg.append("text")
-   .attr("transform", "rotate(-90)")
-   .attr("x", -(height/2))
-   .attr("y", -50)
-   .style("text-anchor", "middle")
-   .style("font-size", "16px")
-   .text("Click on a Country bar to further drill down by Province / Variety");
-*/
-
-svg.append("g")
-		.attr("class", "x axis");
-
-svg.append("g")
-		.attr("class", "y axis")
-	.append("line")
-		.attr("y1", "100%");
-
-
-    // Features of the annotation
-    const annotations = [
-      {
-        note: {
-          title: "Spain has the best value wines."
-        },
-        x: 800,
-        y: 130,
-        dy: 50,
-        dx: 50
-      }
-    ]
-
-// Add annotation to the chart
-const makeAnnotations = d3.annotation()
-      .annotations(annotations)
-
-  d3.select("svg")
-      .append("g")
-      .call(makeAnnotations)
-
-svg.on("click", function() {
-  d3.select(".annotations").remove();
-});
-
-var root = d3.hierarchy(wines)
-	.sum(function(d) { return d.size; });
-
-x.domain([0, root.value]).nice();
-down(root, 0);
-
-function down(d, i) {
-	if (!d.children || this.__transition__) return;
-	var end = duration + d.children.length * delay;
-
-
-	// Mark any currently-displayed bars as exiting.
-	var exit = svg.selectAll(".enter")
-			.attr("class", "exit");
-
-	// Entering nodes immediately obscure the clicked-on bar, so hide it.
-	exit.selectAll("rect").filter(function(p) { return p === d; })
-			.style("fill-opacity", 1e-6);
-
-	// Enter the new bars for the clicked-on data.
-	// Per above, entering bars are immediately visible.
-	var enter = bar(d)
-			.attr("transform", stack(i))
-			.style("opacity", 1);
-
-	// Have the text fade-in, even though the bars are visible.
-	// Color the bars as parents; they will fade to children if appropriate.
-	enter.select("text").style("fill-opacity", 1e-6);
-	enter.select("rect").style("fill", color(true));
-
-	// Update the x-scale domain.
-	x.domain([0, d3.max(d.children, function(d) { return d.value; })]).nice();
-
-	// Update the x-axis.
-	svg.selectAll(".x.axis").transition()
-			.duration(duration)
-			.call(xAxis);
-
-	// Transition entering bars to their new position.
-	var enterTransition = enter.transition()
-			.duration(duration)
-			.delay(function(d, i) { return i * delay; })
-			.attr("transform", function(d, i) { return "translate(0," + barHeight * i * 1.2 + ")"; });
-
-	// Transition entering text.
-	enterTransition.select("text")
-			.style("fill-opacity", 1);
-
-	// Transition entering rects to the new x-scale.
-	enterTransition.select("rect")
-			.attr("width", function(d) { return x(d.value); })
-			.style("fill", function(d) { return color(!!d.children); });
-
-	// Transition exiting bars to fade out.
-	var exitTransition = exit.transition()
-			.duration(duration)
-			.style("opacity", 1e-6)
-			.remove();
-
-	// Transition exiting bars to the new x-scale.
-	exitTransition.selectAll("rect")
-			.attr("width", function(d) { return x(d.value); });
-
-	// Rebind the current node to the background.
-	svg.select(".background")
-			.datum(d)
-		.transition()
-			.duration(end);
-
-	d.index = i;
+text {
+	font: 10px sans-serif;
 }
 
-function up(d) {
-	if (!d.parent || this.__transition__) return;
-	var end = duration + d.children.length * delay;
-
-	// Mark any currently-displayed bars as exiting.
-	var exit = svg.selectAll(".enter")
-			.attr("class", "exit");
-
-	// Enter the new bars for the clicked-on data's parent.
-	var enter = bar(d.parent)
-			.attr("transform", function(d, i) { return "translate(0," + barHeight * i * 1.2 + ")"; })
-			.style("opacity", 1e-6);
-
-	// Color the bars as appropriate.
-	// Exiting nodes will obscure the parent bar, so hide it.
-	enter.select("rect")
-			.style("fill", function(d) { return color(!!d.children); })
-		.filter(function(p) { return p === d; })
-			.style("fill-opacity", 1e-6);
-
-	// Update the x-scale domain.
-	x.domain([0, d3.max(d.parent.children, function(d) { return d.value; })]).nice();
-
-	// Update the x-axis.
-	svg.selectAll(".x.axis").transition()
-			.duration(duration)
-			.call(xAxis);
-
-	// Transition entering bars to fade in over the full duration.
-	var enterTransition = enter.transition()
-			.duration(end)
-			.style("opacity", 1);
-
-	// Transition entering rects to the new x-scale.
-	// When the entering parent rect is done, make it visible!
-	enterTransition.select("rect")
-			.attr("width", function(d) { return x(d.value); })
-			.on("end", function(p) { if (p === d) d3.select(this).style("fill-opacity", null); });
-
-	// Transition exiting bars to the parent's position.
-	var exitTransition = exit.selectAll("g").transition()
-			.duration(duration)
-			.delay(function(d, i) { return i * delay; })
-			.attr("transform", stack(d.index));
-
-	// Transition exiting text to fade out.
-	exitTransition.select("text")
-			.style("fill-opacity", 1e-6);
-
-	// Transition exiting rects to the new scale and fade to parent color.
-	exitTransition.select("rect")
-			.attr("width", function(d) { return x(d.value); })
-			.style("fill", color(true));
-
-	// Remove exiting nodes when the last child has finished transitioning.
-	exit.transition()
-			.duration(end)
-			.remove();
-
-	// Rebind the current parent to the background.
-	svg.select(".background")
-			.datum(d.parent)
-		.transition()
-			.duration(end);
+rect.background {
+	fill: white;
 }
 
-// Creates a set of bars for the given data node, at the specified index.
-function bar(d) {
-	var bar = svg.insert("g", ".y.axis")
-			.attr("class", "enter")
-			.attr("transform", "translate(0,5)")
-		.selectAll("g")
-			.data(d.children)
-		.enter().append("g")
-			.style("cursor", function(d) { return !d.children ? null : "pointer"; })
-			.on("click", down);
-
-	bar.append("text")
-			.attr("x", -6)
-			.attr("y", barHeight / 2)
-			.attr("dy", ".35em")
-			.style("text-anchor", "end")
-			.text(function(d) { return d.data.name; });
-
-	bar.append("rect")
-			.attr("width", function(d) { return x(d.value); })
-			.attr("height", barHeight);
-
-	return bar;
+.axis {
+	shape-rendering: crispEdges;
 }
 
-// A stateful closure for stacking bars horizontally.
-function stack(i) {
-	var x0 = 0;
-	return function(d) {
-		var tx = "translate(" + x0 + "," + barHeight * i * 1.2 + ")";
-		x0 += x(d.value);
-		return tx;
-    };
-  }
+.axis path,
+.axis line {
+	fill: none;
+	stroke: #000;
+}
+
+</style>
+<body>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<!-- Load d3-annotation -->
+<script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
+<script type="text/javascript" src="drill-down.js"></script>
